apply plugin: 'com.android.application'

android {
    compileSdkVersion 28
    defaultConfig {
        applicationId "de.uni_ulm.uberuniulm"
        minSdkVersion 26
        targetSdkVersion 26
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}


dependencies {
    implementation 'androidx.annotation:annotation:1.0.0'
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'androidx.appcompat:appcompat:1.0.0'
    implementation 'androidx.media:media:1.0.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'com.google.android.material:material:1.0.0'
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    //navigation tools
    implementation("com.tomtom.online:sdk-maps:2.4340")
    implementation("com.tomtom.online:sdk-search:2.4340")
    implementation("com.tomtom.online:sdk-routing:2.4340")
    implementation("com.tomtom.online:sdk-traffic:2.4340")
    implementation("com.tomtom.online:sdk-maps-ui-extensions:2.4340")
    implementation("com.tomtom.online:sdk-maps-static-image:2.4340")

//extencion library for driving features
    implementation("com.tomtom.online:sdk-maps-driving-extensions:2.4340")
    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
    implementation 'com.google.firebase:firebase-auth:19.3.1'
    testImplementation 'junit:junit:4.13'
    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
    implementation files('libs/mysql-connector-java-8.0.18.jar')

    implementation "com.google.firebase:firebase-core:17.3.0"
    implementation 'com.google.firebase:firebase-database:19.2.1'
    implementation "com.google.firebase:firebase-storage-ktx:19.1.1"
    implementation "com.google.firebase:firebase-messaging:20.2.1"

    implementation 'com.mikhaellopez:circularimageview:3.2.0'

    implementation 'com.firebaseui:firebase-ui-storage:3.2.1'

    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'

    implementation 'com.github.bumptech.glide:glide:4.10.0'

}

apply plugin: 'maven'
apply plugin: 'com.google.gms.google-services'
